--- a/app/views/base.html
+++ b/app/views/base.html
@@ -33,13 +33,17 @@
             <span class="icon-bar"></span>
           </button>
           <!-- Sovelluksen nimi -->
-          <a class="navbar-brand" href="{{base_path}}">Tsoha Bootstrap</a>
+          <a class="navbar-brand" href="{{base_path}}">Traapija</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}">Etusivu</a></li>
+            <li><a href="{{base_path}}/etusivu">Etusivu</a></li>
+            <li><a href="{{base_path}}/tietokannat">Tietokannat</a></li>
+            <li><a href="{{base_path}}/tilaus">Tilaus</a></li>
+            <li><a href="{{base_path}}/esittelysivu">Esittely</a></li>
+            <li><a href="{{base_path}}/linkkeja">Linkkejä</a></li>
           </ul>
         </div>
       </div>
