mallit ja kontrollerit päivitetty

--- a/app/views/tilaus.html
+++ b/app/views/tilaus.html
@@ -2,7 +2,7 @@
 {% block content %}
   <h1>Tilaa uusi tietokanta</h1>
 
-  <form>
+  <form method="post" action="{{base_path}}/scraper">
     <div class="checkbox">
       <label>
         <input type="checkbox">
