--- a/app/views/tietokannat.html
+++ b/app/views/tietokannat.html
@@ -14,6 +14,7 @@
         <th>Kuvaus</th>
         <th>Hashtagit</th>
         <th>Twiittejä (kpl)</th>
+        <th>Käyttäjiä (kpl)</th>
         <th>Tilauksen status</th>
         <th>Tilaus alkoi</th>
         <th></th>
@@ -21,17 +22,20 @@
     </thead>
 
     <tbody>
-      <!-- Listataan pelit tähän -->
+      <!-- Listataan tilaukset tähän -->
+      {% for tweet in tweets %}
       <tr>
-        <td><a href="#">Eduskuntavaalit 2015</a></td>
+        <td><a href="{{base_path}}/{{tweet.id}}">{{tweet.name}}</a></td>
         <td>1.1.2015-31.5.2015</td>
         <td>Vuoden 2015 ek-vaalien Twitter-keskustelua</td>
         <td>#vaalit2015</td>
+        <td>575</td>
         <td>575</td>
         <td><label class="label label-danger">käynnissä</label></td>
         <td>1.9.2015</td>
         <th><a class="btn btn-default btn-sm" href="#">Muokkaa</a></th>
       </tr>
+      {% endfor %}
     </tbody>
   </table>
 {% endblock %}
