Sisäänkirjausta ja validointia työstetty

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -41,7 +41,8 @@
             <!-- Navigaation linkit -->
             <li><a href="{{base_path}}/etusivu">Etusivu</a></li>
             <li><a href="{{base_path}}/tietokannat">Tietokannat</a></li>
-            <li><a href="{{base_path}}/tilaus">Tilaus</a></li>
+            <li><a href="{{base_path}}/tilaukset">Omat tilaukset</a></li>
+            <li><a href="{{base_path}}/tilaus">Uusi tilaus</a></li>
             <li><a href="{{base_path}}/esittelysivu">Esittely</a></li>
             <li><a href="{{base_path}}/linkkeja">Linkkejä</a></li>
           </ul>
