--- a/app/views/tietokannat.html
+++ b/app/views/tietokannat.html
@@ -25,7 +25,7 @@
       <!-- Listataan tilaukset tähän -->
       {% for tweet in tweets %}
       <tr>
-        <td><a href="{{base_path}}/{{tweet.id}}">{{tweet.name}}</a></td>
+        <td><a href="{{base_path}}/tweet/{{tweet.id}}">{{tweet.name}}</a></td>
         <td>1.1.2015-31.5.2015</td>
         <td>Vuoden 2015 ek-vaalien Twitter-keskustelua</td>
         <td>#vaalit2015</td>
