Updated files to English and worked on scraper

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -39,12 +39,12 @@
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}/etusivu">Etusivu</a></li>
-            <li><a href="{{base_path}}/tietokannat">Tietokannat</a></li>
-            <li><a href="{{base_path}}/tilaukset">Omat tilaukset</a></li>
-            <li><a href="{{base_path}}/tilaus">Uusi tilaus</a></li>
-            <li><a href="{{base_path}}/esittelysivu">Esittely</a></li>
-            <li><a href="{{base_path}}/linkkeja">Linkkejä</a></li>
+<!--             <li><a href="{{base_path}}/index">Etusivu</a></li> -->
+            <li><a href="{{base_path}}/data">Your data</a></li>
+            <li><a href="{{base_path}}/userrequests">Your requests</a></li>
+            <li><a href="{{base_path}}/request">New request</a></li>
+            <li><a href="{{base_path}}/about">About</a></li>
+            <li><a href="{{base_path}}/links">Links</a></li>
           </ul>
         </div>
       </div>
