--- a/app/views/links.html
+++ b/app/views/links.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 	<div class="page-header">
-    	<h1>Linkkejä</h1>
+    	<h1>Links</h1>
   	</div>
   	<p>
-    	Tänne on kerätty hyödyllisiä linkkejä python-perustaiseen Twitter-ryömintään. 
+    	Here you will find some useful links for Twitter crawling. 
   	</p>
 
-	<h3>Twitter ja muut API:t</h3>
+	<h3>Twitter and other API:s</h3>
 		<ul>
 			<li>
 				<a href="https://dev.twitter.com/rest/">Twitterin REST API</a></li>
@@ -17,7 +17,7 @@
 			<li><a href="http://support.gnip.com/apis/historical_api/">Gnipin Historical Power Track API</a></li>
 		</ul>
 
-	<h3>Python-ryömijät</h3>
+	<h3>Python crawlers</h3>
 		<ul>
 			<li>
 				<a href="https://github.com/tweepy/tweepy">Tweepy</a>
@@ -27,7 +27,7 @@
 			</li>
 		</ul>
 
-	<h3>Ohjeet</h3>
+	<h3>Directions</h3>
 		<ul>
 			<li>
 				<a href="http://marcobonzanini.com/2015/03/02/mining-twitter-data-with-python-part-1/">Marco Bonzaninin perusteellinen tutorial</a>
@@ -37,7 +37,7 @@
 			</li>
 		</ul>
 
-	<h3>Esimerkit</h3>
+	<h3>Examples</h3>
 		<ul>
 			<li><a href="https://github.com/datanalysis15m/">Datanalysis15M</a>
 			</li>
