--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,7 +5,7 @@
   </div>
   <p>Tervetuloa Traapijaan! Sovellus on toteutettu harjoitustyönä Helsingin yliopiston tietojenkäsittelytieteen laitoksella ja suunniteltu palvelemaan yhteiskuntatieteilijöitä ja toimittajia.
   </p>
-  <p>Traapija on projektina vasta kehitteillä. Tällä hetkellä tavoitteena on raapia twitterin #hashtageja sekä takautuvasti että jatkuvana syötteenä. Hankkeen edetessä, Traapija saattaa saada uusia ominaisuuksia. Voit tutustua sovelluksen dokumentaatioon tarkemmin <a href="{{base_path}}/esittelysivu">esittelysivulta</a>.
+  <p>Traapija on projektina vasta kehitteillä. Tällä hetkellä tavoitteena on raapia twitterin #hashtageja sekä takautuvasti että jatkuvana syötteenä. Hankkeen edetessä, Traapija saattaa saada uusia ominaisuuksia. Voit tutustua sovelluksen dokumentaatioon tarkemmin <a href="{{base_path}}/about">esittelysivulta</a>.
   </p>
   <p>
     <a href="{{base_path}}/tilaus" class="btn btn-primary btn-lg">Tee uusi tilaus<span class="glyphicon glyphicon-chevron-right"></span></a>
