--- a/app/views/userrequests.html
+++ b/app/views/userrequests.html
@@ -2,10 +2,10 @@
 {% block content %}
 {% import "macros/forms.html" as forms %}
 
-  <h1>Käyttäjän hegemonni tilaukset</h1>
+  <h1>Data requests by 'hegemonni'</h1>
 
   <p>
-    <a href="{{base_path}}/tilaus" class="btn btn-success">Tee uusi tilaus</a>
+    <a href="{{base_path}}/request" class="btn btn-success">New request</a>
   </p>
 
   <table class="table table-striped table-bordered">
@@ -13,8 +13,8 @@
       <tr>
         <th>Name</th>
         <th>Description</th>
-        <th>Hashtagit</th>
-        <th>Timespan</th>
+        <th>Hashtags</th>
+<!--         <th>Timespan</th> -->
         <th>Created</th>
         <th>Edit</th>
         <th>Delete</th>
@@ -28,9 +28,9 @@
         <td><a href="{{base_path}}/request/{{request.id}}">{{request.name}}</a></td>
         <td><a href="{{base_path}}/request/{{request.id}}">{{request.description}}</a>/td>
         <td><a href="{{base_path}}/request/{{request.id}}">{{request.hashtags}}</a></td>
-        <td><a href="{{base_path}}/request/{{request.id}}">{{request.start_date}} - {{request.end_date}}</a></td>
+<!--         <td><a href="{{base_path}}/request/{{request.id}}">{{request.start_date}} - {{request.end_date}}</a></td> -->
         <td><a href="{{base_path}}/tilaus/{{request.id}}">-</a></td>
-        <th><a class="btn btn-default btn-sm" href="{{base_path}}/tilaus/{{request.id}}/edit">Muokkaa</a></th>
+        <th><a class="btn btn-default btn-sm" href="{{base_path}}/tilaus/{{request.id}}/edit">Edit</a></th>
         <th>{{forms.destroy_button()}}</th>
       </tr>
       {% endfor %}
